--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <body>
         <h1>Mikayla Remolacio's Portfolio</h1>
         <h3>Who Am I?</h3>
+        <p>
+            Hello! My name is Mikayla Remolacio.
+        </p>
     </body>
     <footer>
         <p>Copyright © 2024 Mikayla Remolacio</p>
