--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         </p>
     </body>
     <footer>
-        <p>Copyright © 2024 Mikayla Remolacio</p>
+        <p>Mikayla Remolacio. Last updated October 2025</p>
     </footer>
 </html>
