--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="home.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
         <title>Mikayla Remolacio</title>
     </head>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about/about.html">About Me</a></li>
+                <li><a href="projects/project.html">Projects</a></li>
+                <li><a href="contact/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <body>
-        <h1>Mikayla Remolacio's Portfolio</h1>
+        <div class="headline">
+            <img src="images/mikayla.jpg" alt="Mikayla Remolacio">
+            <h1>Mikayla Remolacio's Portfolio</h1>
+        </div>
         <h3>Who Am I?</h3>
         <p>
-            Hello! My name is Mikayla Remolacio.
+            Hello! My name is Mikayla Remolacio. 
         </p>
     </body>
     <footer>
